--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.TechMall"
         tools:targetApi="31">
         <activity
+            android:name=".AddItemActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.EditActivity"
             android:exported="false" />
         <activity
