--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,12 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-    <uses-permission android:name="android.permission.READ_SMS"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -23,23 +24,29 @@
         android:theme="@style/Theme.TechMall"
         tools:targetApi="31">
         <activity
+            android:name=".activities.LaptopActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.SmartPhoneActivity"
+            android:exported="true" />
+        <activity
             android:name=".activities.NewUserActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activities.AddItemActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activities.EditActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activities.SellerProductsActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activities.FragsActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
