--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         android:theme="@style/Theme.TechMall"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ResetPasswordActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.LaptopActivity"
             android:exported="true" />
         <activity
