--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.techmall"
+        applicationId "com.wolf.techmall"
         minSdk 21
         targetSdk 33
-        versionCode 1
+        versionCode 3
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -40,9 +40,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
-    implementation 'com.google.firebase:firebase-firestore:24.4.1'
+    implementation 'com.google.firebase:firebase-firestore:24.4.2'
     implementation 'com.google.firebase:firebase-storage:20.1.0'
-    implementation 'com.google.firebase:firebase-functions-ktx:20.2.1'
+    implementation 'com.google.firebase:firebase-functions-ktx:20.2.2'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'com.google.android.gms:play-services-ads:21.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
